# tactical-asset-allocation

./: README.md  pyproject.toml
notebooks/: Main.ipynb
src/pytaa/backtest/: positions.py  returns.py
src/pytaa/strategy/: signals.py  static.py
src/pytaa/tools/: data.py
