[project]
name = "tactical-asset-allocation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.0",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numba>=0.61.2",
    "pandas>=2.3.1",
    "plotly",
    "plotly-express>=0.4.1",
    "plotly-io",
    "scipy>=1.16.0",
    "yfinance>=0.2.65",
]
